--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
+        "ext-gd": "^7.2",
         "barryvdh/laravel-dompdf": "^0.8.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "~5.0",
-        "ext-gd": "*"
+        "laravelcollective/html": "~5.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
